--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <link rel="stylesheet" href="styles.css">
@@ -10,7 +10,12 @@
 <body>
     
 </body>
-
-
+<div class="header">
+    <div class="logo">Logo</div>
+    <ul class="links">
+        <li><a>Link one</a></li>
+        <li><a>Link two</a></li>
+    </ul>
+</div>
 
 </html>
