Add header colors and sizes

--- a/index.html
+++ b/index.html
@@ -8,14 +8,47 @@
 </head>
 
 <body>
-    
-</body>
 <div class="header">
-    <div class="logo">Logo</div>
+    <div class="logo">Header logo</div>
     <ul class="links">
-        <li><a>Link one</a></li>
-        <li><a>Link two</a></li>
+        <li class="white-text"><a>Link one</a></li>
+        <li class="white-text"><a>Link two</a></li>
+        <li class="white-text"><a>Link three</a></li>
     </ul>
 </div>
+<div class="black-center">
+    <div class="black-left">
+        <div class="header-black">This website is awesome</div>
+        <div class="white-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas lorem. Integer tempor. Nulla est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Integer vulputate sem a nibh rutrum consequat. Curabitur sagittis hendrerit ante.</div>
+        <button class="top-button">Sign up</button>
+    </div>
+    <div class="placeholder">Placeholder for an image</div>
+</div>
+<div class="white-center">
+    <div class="black-bold-text">Some random information</div>
 
+    <div class="image-placeholder">Image placeholder</div>
+    <div class="under-image">Some text under an image</div>
+    <div class="image-placeholder">Image placeholder</div>
+    <div class="under-image">Some text under an image</div>
+    <div class="image-placeholder">Image placeholder</div>
+    <div class="under-image">Some text under an image</div>
+    <div class="image-placeholder">Image placeholder</div>
+    <div class="under-image">Some text under an image</div>
+</div>
+<div class="gray-center">
+    <div class="inspo">A really long inspiring quote goes here, well, I hope it will.</div>
+    <div class="quote">-Someone really famous</div>
+</div>
+<div class="button-center">
+    <div class="blue-square">
+        <div class="blue-bold">Call to action</div>
+        <div class="signup">Sign-up for our new product.</div>
+        <button class="blue-button">Sign-up</button>
+    </div>
+</div>
+</body>
+<footer>
+    <div class="footer-text">Copyright</div>
+</footer>
 </html>
