Add rough header design

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="white-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas lorem. Integer tempor. Nulla est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Integer vulputate sem a nibh rutrum consequat. Curabitur sagittis hendrerit ante.</div>
         <button class="top-button">Sign up</button>
     </div>
-    <div class="placeholder">Placeholder for an image</div>
+    <div class="placeholder"></div>
 </div>
 <div class="white-center">
     <div class="black-bold-text">Some random information</div>
