Finish header and two parts below

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <div class="header">
     <div class="logo">Header logo</div>
     <ul class="links">
-        <li class="white-text"><a>Link one</a></li>
-        <li class="white-text"><a>Link two</a></li>
-        <li class="white-text"><a>Link three</a></li>
+        <li class="white-text"><a>Header link one</a></li>
+        <li class="white-text"><a>Header link two</a></li>
+        <li class="white-text"><a>Header link three</a></li>
     </ul>
 </div>
 <div class="black-center">
@@ -24,20 +24,27 @@
     </div>
     <div class="placeholder"></div>
 </div>
+<div class="black-bold-text">Some random information.</div>
 <div class="white-center">
-    <div class="black-bold-text">Some random information</div>
-
-    <div class="image-placeholder">Image placeholder</div>
-    <div class="under-image">Some text under an image</div>
-    <div class="image-placeholder">Image placeholder</div>
-    <div class="under-image">Some text under an image</div>
-    <div class="image-placeholder">Image placeholder</div>
-    <div class="under-image">Some text under an image</div>
-    <div class="image-placeholder">Image placeholder</div>
-    <div class="under-image">Some text under an image</div>
+    <div class="container">
+        <div class="image-placeholder"></div>
+        <div class="under-image">Some text under an image</div>
+    </div>
+    <div class="container">
+        <div class="image-placeholder"></div>
+        <div class="under-image">Some text under an image</div>
+    </div>
+    <div class="container">
+        <div class="image-placeholder"></div>
+        <div class="under-image">Some text under an image</div>
+    </div>
+    <div class="container">
+        <div class="image-placeholder"></div>
+        <div class="under-image">Some text under an image</div>
+    </div>
 </div>
 <div class="gray-center">
-    <div class="inspo">A really long inspiring quote goes here, well, I hope it will.</div>
+    <div class="inspo">A really long inspiring quote goes here, well, I hope it will. I'll make it really long, because this whole thing is just so inspiring for me, good God, look what I've managed so far.</div>
     <div class="quote">-Someone really famous</div>
 </div>
 <div class="button-center">
