Add lower blue square styling

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
     <div class="inspo">A really long inspiring quote goes here, well, I hope it will. I'll make it really long, because this whole thing is just so inspiring for me, good God, look what I've managed so far.</div>
     <div class="quote">-Someone really famous</div>
 </div>
-<div class="button-center">
     <div class="blue-square">
-        <div class="blue-bold">Call to action</div>
-        <div class="signup">Sign-up for our new product.</div>
+        <div class="left-blue">
+            <div class="blue-bold">Call to action!</div>
+            <div class="signup">Sign-up for our new product.</div>
+        </div>
         <button class="blue-button">Sign-up</button>
     </div>
-</div>
 </body>
 <footer>
     <div class="footer-text">Copyright</div>
