--- a/index.html
+++ b/index.html
@@ -54,8 +54,6 @@
         </div>
         <button class="blue-button">Sign-up</button>
     </div>
+<div class="footer">Copyright</div>
 </body>
-<footer>
-    <div class="footer-text">Copyright</div>
-</footer>
 </html>
